welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:4: error: type mismatch;
 found   : Unit
 required: Int
	for ( x <- 0 to nums.length-1) { y = nums(x); s = s + y}
                ^